# ChameleonIQ

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  USAGE.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
config/: defaults.py  nema_phantom_config.yaml
docs/source/: conf.py  getting_started.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: custom_theme.css
docs/source/_templates/autosummary/: class.rst  function.rst
docs/source/api/: config.rst  nema_merge.rst  nema_quant.rst  nema_quant_analysis.rst  nema_quant_interactive_roi_editor.rst  nema_quant_io.rst  nema_quant_iter.rst  nema_quant_phantom.rst  nema_quant_reporting.rst  nema_quant_utils.rst
docs/source/guides/: architecture.rst  batch_processing.rst  changelog.rst  configuration.rst  contributing.rst  faq.rst  future_work.rst  how_it_works.rst  license.rst  troubleshooting.rst
documentation/: CHANGELOG.md  HOW_IT_WORKS.md  INSTALLATION.md  USAGE.md  changelog-template.hbs
src/: __init__.py
src/GUI/: chameleon_iq.py
src/config/: __init__.py  defaults.py  nema_phantom_config.yaml  nema_phantom_config_nu4_2008.yaml
src/nema_merge/: cli.py  reporting.py
src/nema_quant/: __init__.py  analysis.py  cli.py  interactive_roi_editor.py  io.py  metrics.py  phantom.py  registration.py  reporting.py  statistics.py  utils.py
src/nema_quant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nema_quant_iter/: cli.py  reporting.py
src/scripts/: verify_airwater_rois.py  verify_uniform_mask.py  verify_z_range.py
tests/: conftest.py  test_analysis.py  test_analysis_comprehensive.py  test_analysis_missing_lines.py  test_analysis_specific_lines.py  test_analysis_visualizations.py  test_cli.py  test_cli_comprehensive.py  test_cli_key_error_handling.py  test_cli_missing_lines.py  test_cli_remaining_coverage.py  test_direct_coverage.py  test_final_analysis_push.py  test_force_real_coverage.py  test_function_signatures.py  test_io.py  test_phantom.py  test_remaining_analysis_lines.py  test_reporting.py  test_reporting_comprehensive.py  test_reporting_missing_lines.py  test_utils.py
