[metadata]
name = Nema Analysis Tool
description = A Python tool for automated PET image quality analysis based on NEMA NU 2-2018 standard, focusing on Section 7.4.1 with features for calculating Percent Contrast, Background Variability, and Accuracy of Corrections using 3D ROIs.
author = Edwing Ulin-Briseno
license = MIT
license_file = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = 
    nema_quant
install_requires =
    matplotlib>=3.10
    numpy>=2.3
    PyYAML>=6.0
    reportlab>=4.4
    scipy>=1.16
    yacs>0.1
    setuptools>=80.9
python_requires = >=3.9
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing=
    tox>=4.27
    pytest>=8.4
    pytest-cov>=6.2
    mypy>=1.16
    flake8>=7.3

[flake8]
max-line-length = 160
